--- a/src/view/ViewMain.form
+++ b/src/view/ViewMain.form
@@ -1095,7 +1095,7 @@
                                   <Group type="103" groupAlignment="0" attributes="0">
                                       <Component id="jScrollPane2" alignment="0" pref="576" max="32767" attributes="0"/>
                                       <Group type="102" alignment="0" attributes="0">
-                                          <Component id="jTextField1" min="-2" pref="179" max="-2" attributes="0"/>
+                                          <Component id="valueCari" min="-2" pref="179" max="-2" attributes="0"/>
                                           <EmptySpace max="-2" attributes="0"/>
                                           <Component id="jButton1" min="-2" pref="29" max="-2" attributes="0"/>
                                       </Group>
@@ -1114,7 +1114,7 @@
                               <Component id="jButton1" alignment="1" min="-2" pref="34" max="-2" attributes="0"/>
                               <Group type="103" alignment="0" groupAlignment="3" attributes="0">
                                   <Component id="jLabel3" alignment="3" min="-2" max="-2" attributes="1"/>
-                                  <Component id="jTextField1" alignment="3" max="32767" attributes="1"/>
+                                  <Component id="valueCari" alignment="3" max="32767" attributes="1"/>
                               </Group>
                           </Group>
                           <EmptySpace min="-2" pref="51" max="-2" attributes="0"/>
@@ -1196,7 +1196,7 @@
                     <Property name="text" type="java.lang.String" value="Cari"/>
                   </Properties>
                 </Component>
-                <Component class="javax.swing.JTextField" name="jTextField1">
+                <Component class="javax.swing.JTextField" name="valueCari">
                 </Component>
                 <Component class="javax.swing.JButton" name="jButton1">
                   <Properties>
@@ -1231,9 +1231,9 @@
                                   </Group>
                                   <EmptySpace max="32767" attributes="0"/>
                                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                      <Component id="jTextField3" alignment="0" max="32767" attributes="1"/>
-                                      <Component id="jTextField4" alignment="1" max="32767" attributes="1"/>
-                                      <Component id="jTextField2" alignment="0" min="-2" pref="325" max="-2" attributes="1"/>
+                                      <Component id="istd" alignment="0" max="32767" attributes="1"/>
+                                      <Component id="iemp" alignment="1" max="32767" attributes="1"/>
+                                      <Component id="ivip" alignment="0" min="-2" pref="325" max="-2" attributes="1"/>
                                   </Group>
                               </Group>
                               <Group type="102" alignment="0" attributes="0">
@@ -1244,9 +1244,9 @@
                                   </Group>
                                   <EmptySpace max="32767" attributes="0"/>
                                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                      <Component id="jTextField7" alignment="0" max="32767" attributes="1"/>
-                                      <Component id="jTextField5" alignment="1" max="32767" attributes="1"/>
-                                      <Component id="jTextField6" alignment="1" min="-2" pref="320" max="-2" attributes="1"/>
+                                      <Component id="ih50" alignment="0" max="32767" attributes="1"/>
+                                      <Component id="ih20" alignment="1" max="32767" attributes="1"/>
+                                      <Component id="ih30" alignment="1" min="-2" pref="320" max="-2" attributes="1"/>
                                       <Group type="102" alignment="1" attributes="0">
                                           <Component id="jButton6" min="-2" pref="69" max="-2" attributes="0"/>
                                           <EmptySpace max="-2" attributes="0"/>
@@ -1275,35 +1275,35 @@
                           <Component id="jLabel10" min="-2" max="-2" attributes="1"/>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="jTextField2" max="32767" attributes="1"/>
+                              <Component id="ivip" max="32767" attributes="1"/>
                               <Component id="jLabel9" alignment="0" min="-2" max="-2" attributes="1"/>
                           </Group>
                           <EmptySpace max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="1" attributes="0">
-                              <Component id="jTextField3" max="32767" attributes="1"/>
+                              <Component id="istd" max="32767" attributes="1"/>
                               <Component id="jLabel11" alignment="1" min="-2" pref="24" max="-2" attributes="1"/>
                           </Group>
                           <EmptySpace max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="jLabel12" alignment="3" min="-2" pref="24" max="-2" attributes="1"/>
-                              <Component id="jTextField4" alignment="3" pref="24" max="32767" attributes="1"/>
+                              <Component id="iemp" alignment="3" pref="24" max="32767" attributes="1"/>
                           </Group>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
                           <Component id="jLabel13" min="-2" max="-2" attributes="1"/>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="jTextField7" alignment="0" max="32767" attributes="1"/>
+                              <Component id="ih50" alignment="0" max="32767" attributes="1"/>
                               <Component id="jLabel16" alignment="0" min="-2" max="-2" attributes="1"/>
                           </Group>
                           <EmptySpace max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="1" attributes="0">
-                              <Component id="jTextField6" max="32767" attributes="1"/>
+                              <Component id="ih30" max="32767" attributes="1"/>
                               <Component id="jLabel15" alignment="1" min="-2" pref="24" max="-2" attributes="1"/>
                           </Group>
                           <EmptySpace max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="jLabel14" alignment="3" min="-2" pref="24" max="-2" attributes="1"/>
-                              <Component id="jTextField5" alignment="3" pref="24" max="32767" attributes="1"/>
+                              <Component id="ih20" alignment="3" pref="24" max="32767" attributes="1"/>
                           </Group>
                           <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
@@ -1348,11 +1348,11 @@
                     <Property name="text" type="java.lang.String" value="Empty"/>
                   </Properties>
                 </Component>
-                <Component class="javax.swing.JTextField" name="jTextField2">
+                <Component class="javax.swing.JTextField" name="ivip">
                 </Component>
-                <Component class="javax.swing.JTextField" name="jTextField3">
+                <Component class="javax.swing.JTextField" name="istd">
                 </Component>
-                <Component class="javax.swing.JTextField" name="jTextField4">
+                <Component class="javax.swing.JTextField" name="iemp">
                 </Component>
                 <Component class="javax.swing.JLabel" name="jLabel13">
                   <Properties>
@@ -1362,7 +1362,7 @@
                     <Property name="text" type="java.lang.String" value="Harga Sewa Wi-Fi"/>
                   </Properties>
                 </Component>
-                <Component class="javax.swing.JTextField" name="jTextField5">
+                <Component class="javax.swing.JTextField" name="ih20">
                 </Component>
                 <Component class="javax.swing.JLabel" name="jLabel14">
                   <Properties>
@@ -1380,7 +1380,7 @@
                     <Property name="text" type="java.lang.String" value="30 Mbps"/>
                   </Properties>
                 </Component>
-                <Component class="javax.swing.JTextField" name="jTextField6">
+                <Component class="javax.swing.JTextField" name="ih30">
                 </Component>
                 <Component class="javax.swing.JLabel" name="jLabel16">
                   <Properties>
@@ -1390,7 +1390,7 @@
                     <Property name="text" type="java.lang.String" value="50 Mbps"/>
                   </Properties>
                 </Component>
-                <Component class="javax.swing.JTextField" name="jTextField7">
+                <Component class="javax.swing.JTextField" name="ih50">
                 </Component>
                 <Component class="javax.swing.JButton" name="jButton6">
                   <Properties>
