--- a/src/view/ViewMain.form
+++ b/src/view/ViewMain.form
@@ -1197,6 +1197,9 @@
                   </Properties>
                 </Component>
                 <Component class="javax.swing.JTextField" name="valueCari">
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="valueCariActionPerformed"/>
+                  </Events>
                 </Component>
                 <Component class="javax.swing.JButton" name="jButton1">
                   <Properties>
@@ -1207,6 +1210,9 @@
                       <Image iconType="3" name="/assets/icons8-search-20.png"/>
                     </Property>
                   </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+                  </Events>
                 </Component>
               </SubComponents>
             </Container>
@@ -1381,6 +1387,9 @@
                   </Properties>
                 </Component>
                 <Component class="javax.swing.JTextField" name="ih30">
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ih30ActionPerformed"/>
+                  </Events>
                 </Component>
                 <Component class="javax.swing.JLabel" name="jLabel16">
                   <Properties>
